# project_cx

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.js  build.py  readme.md  vcpkg-configuration.json
assets/shaders/: main.glsl
modules/: clone.js  clone.py
modules/cl/: CMakeLists.txt
modules/cl/source/cl/camera/: cam2.cpp  cam2.h  cam3.cpp  cam3.h
modules/cl/source/cl/compiler/: lexer.cpp  lexer.h  scanner.cpp  scanner.h  token.cpp  token.h
modules/cl/source/cl/data/: darr.h  sl_list.h
modules/cl/source/cl/math/: mat2_base_d.h  mat2_base_f.h  mat2_base_s.h  mat2_base_u.h  mat2_transf_d.h  mat2_transf_f.h  mat3_base_d.h  mat3_base_f.h  mat3_base_s.h  mat3_base_u.h  mat3_transf_d.h  mat3_transf_f.h  mat4_base_d.h  mat4_base_f.h  mat4_base_s.h  mat4_base_u.h  mat4_transf_d.h  mat4_transf_f.h  math_i.cpp  math_i.h  math_r.cpp  math_r.h  rand_r.cpp  rand_r.h  vec2_base_d.h  vec2_base_f.h  vec2_base_s.h  vec2_base_u.h  vec3_base_d.h  vec3_base_f.h  vec3_base_s.h  vec3_base_u.h  vec3_color_d.h  vec3_color_f.h  vec4_base_d.h  vec4_base_f.h  vec4_base_s.h  vec4_base_u.h  vec4_color_d.h  vec4_color_f.h
modules/cl/source/cl/math/mat2/: base.cpp  base.h  int.cpp  int.h  mat2.cpp  real.cpp  real.h  struct.cpp  struct.h  struct_f.h  transf.cpp  transf.h
modules/cl/source/cl/math/mat3/: base.cpp  base.h  int.cpp  int.h  mat3.cpp  real.cpp  real.h  struct.cpp  struct.h  struct_d.h  struct_s.h  struct_u.h  transf.cpp  transf.h
modules/cl/source/cl/math/mat4/: base.cpp  base.h  int.cpp  int.h  mat4.cpp  real.cpp  real.h  struct.cpp  struct.h  transf.cpp  transf.h
modules/cl/source/cl/math/vec2/: base.cpp  base.h  int.cpp  int.h  real.cpp  real.h  struct.cpp  struct.h  vec2.cpp
modules/cl/source/cl/math/vec3/: base.cpp  base.h  color.cpp  color.h  int.cpp  int.h  real.cpp  real.h  struct.cpp  struct.h  vec3.cpp
modules/cl/source/cl/math/vec4/: base.cpp  base.h  color.cpp  color.h  int.cpp  int.h  real.cpp  real.h  struct.cpp  struct.h  vec4.cpp
modules/cl/source/cl/string/: cstr.cpp  cstr.h  dstr.cpp  dstr.h  sstr.cpp  sstr.h
modules/engine/: CMakeLists.txt
modules/engine/assets/shaders/: arrow2_rend.glsl  arrow3_rend.glsl  frame3_rend.glsl  grid_rend.glsl  line2_rend.glsl  line3_rend.glsl  line_rend.glsl  mesh_rend.glsl  point_rend.glsl  sky_rend.glsl
modules/engine/assets/shaders/ray_marcher/: collision.glsl  main.glsl  map.glsl  output.glsl
modules/engine/source/engine/renderers/: arrow2_rend.cpp  arrow2_rend.h  arrow3_rend.cpp  arrow3_rend.h  frame3_rend.cpp  frame3_rend.h  line2_rend.cpp  line2_rend.h  line3_rend.cpp  line3_rend.h  mesh_rend.cpp  mesh_rend.h  point_rend.cpp  point_rend.h  ray_marcher.cpp  ray_marcher.h  sky_rend.cpp  sky_rend.h
modules/engine/source/engine/test/: context.h  main.h
modules/examples/: CMakeLists.txt
modules/examples/assets/: camera.glsl
modules/examples/source/examples/: arrow2_rend.h  arrow3_rend.h  cam2.h  cam3.h  frame3_rend.h  line2_rend.h  line3_rend.h  point_rend.h  ray_marcher.h  shader.h
modules/examples/source/examples/basic/: gl.h  hello_world.h  imgui.h  read_file.h  window.h
modules/gl/: CMakeLists.txt  readme.md
modules/gl/source/gl/: directive.cpp  directive.h  shader.cpp  shader.h  shader_src.cpp  shader_src.h
modules/gl/source/glad/: gl.h
modules/imgui/: CMakeLists.txt  readme.md
modules/imgui/source/imgui_gl/: imgui_impl_opengl3.cpp
modules/imgui/source/imgui_sdl/: imgui_impl_sdl3.cpp  imgui_impl_sdl3.h
project/: CMakeLists.txt
project/source/: main.cpp
